--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bleach==2.1.2
+cycler==0.10.0
 decorator==4.1.2
 entrypoints==0.2.3
 html5lib==1.0.1
@@ -14,10 +15,13 @@ jupyter-client==5.2.1
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 MarkupSafe==1.0
+matplotlib==2.1.1
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.2.2
+numpy==1.14.0
+pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.1.1
 pexpect==4.3.1
@@ -25,7 +29,9 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
+pytz==2017.3
 pyzmq==16.0.3
 qtconsole==4.3.1
 simplegeneric==0.8.1
@@ -37,3 +43,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.1.0
+xmltodict==0.11.0
